<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblChopp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="70dp"
        android:text="Chopp:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/chopp" />

    <TextView
        android:id="@+id/lblPizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:text="Pizzas:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblChopp"
        tools:text="@string/pizzas" />

    <TextView
        android:id="@+id/lblRecheios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:text="Recheios:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPizzas"
        tools:text="@string/recheios" />

    <TextView
        android:id="@+id/lblPessoas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:text="Pessoas:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecheios"
        tools:text="@string/pessoas" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="50dp"
        android:text="Pizzaria"
        app:layout_constraintBottom_toTopOf="@+id/editTextChopp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextChopp"
        android:layout_width="216dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblChopp" />

    <EditText
        android:id="@+id/editTextPizzas"
        android:layout_width="221dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPizzas" />

    <EditText
        android:id="@+id/editTextRecheios"
        android:layout_width="227dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRecheios" />

    <EditText
        android:id="@+id/editTextPessoas"
        android:layout_width="234dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPessoas" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="88dp"
        android:onClick="onCalcular"
        android:text="Calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPessoas"
        tools:text="@string/calcular" />

    <TextView
        android:id="@+id/lblConsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="32dp"
        android:text="Consumo:"
        app:layout_constraintBottom_toTopOf="@+id/lblServiços"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        tools:text="@string/consumo" />

    <TextView
        android:id="@+id/lblServiços"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="Serviços:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblConsumo"
        tools:text="@string/serviços" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="Total:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblServiços"
        tools:text="@string/total" />

    <TextView
        android:id="@+id/lblPorPessoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="Por Pessoa:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTotal"
        tools:text="@string/porpessoa" />

    <TextView
        android:id="@+id/lblConsumo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="________"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblConsumo"
        app:layout_constraintStart_toEndOf="@+id/lblConsumo"
        tools:text="@string/consumo2" />

    <TextView
        android:id="@+id/lblServicos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="___________"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblServiços"
        app:layout_constraintStart_toEndOf="@+id/lblServiços"
        tools:text="@string/serviços2" />

    <TextView
        android:id="@+id/lblTotal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="___________"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblTotal"
        app:layout_constraintStart_toEndOf="@+id/lblTotal"
        tools:text="@string/total2" />

    <TextView
        android:id="@+id/lblPorPessoa2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="________________"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblPorPessoa"
        app:layout_constraintStart_toEndOf="@+id/lblPorPessoa"
        tools:text="@string/porpessoa2" />

</android.support.constraint.ConstraintLayout>